# KGSUMM

./: README.md
Task1/Supervised_Model_ESLM/ESBM_v1.2/: main.py  step1_requirements.txt
Task1/Supervised_Model_ESLM/ESBM_v1.2/classes/: config.py  dataset.py
Task1/Unsupervised_Learning_IRES_Model/ESBM_v1.2/: config.py  gcnencoder.py  main.py  pyproject.toml
Task1/Unsupervised_Learning_IRES_Model/ESBM_v1.2/Evaluation/: 2_GATES_evaluation.py  3_ground_truth_with_gates_summary.py  recreate_IRES_files.py
Task1/Unsupervised_Learning_IRES_Model/ESBM_v1.2/Temp/: dbpedia.json  dbpedia_groundtruth.json  lmdb.json  lmdb_groundtruth.json
Task1/Unsupervised_Learning_IRES_Model/ESBM_v1.2/Tool/ESBM_PLUS_descriptions/lmdb/: test.tsv
Task1/Unsupervised_Learning_IRES_Model/FACES/: .gitignore  evaluate.py  main.py  pyproject.toml  utils.py
Task1/Unsupervised_Learning_IRES_Model/FACES/Dataset/: utils.py
Task1/Unsupervised_Learning_IRES_Model/FACES/Output/Trained_Models/: faces_rdf_esbm.pkl
Task1/Unsupervised_Learning_IRES_Model/FACES/Output/results/: detailed_IRES_FACES_metrics_R0.csv
Task1/Unsupervised_Learning_IRES_Model/FACES/Temp/: entities.txt  faces_entities.json  faces_groundtruth.json
Task1/Unsupervised_Learning_IRES_Model/Temp/: faces_entities.json  faces_groundtruth.json
Task1_2/Unsupervised_Learning_IRES_Model/ESBM_v1.2/: README.md  evaluate.py  utils.py
Unsupervised_Learning_IRES/ESBM_v1.2/: CITATION.cff  loss_function.py  utils.py
Unsupervised_Learning_IRES/ESBM_v1.2/output/Trained_Models/: dbpedia_rdf_esbm.pkl  lmdb_rdf_esbm.pkl
(+6 files in other folders)
