[tool.poetry]
name = "IRES"
version = "1.0.0"
description = ""
authors = ["Atefeh Moradan","Mohammad Sorkhpar","Atsushi Miyauchi","Davide Mottin","Ira Assent"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
NetLSD = "^1.0.2"
networkx = "^3.1"
numpy = "^1.24.2"
pandas = "^2.0.0"
pykeen = "^1.10.1"
rdflib = "^7.0.0"
torch = "^2.0.1"
torch_geometric = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
